--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,9 +36,15 @@
   </div>
 </div>
 
-<div class="user-nav-bar">
-  <div class="user-nav-item active">投稿した作品</div>
-  <div class="user-nav-item">いいねした作品</div>
+<div class="sub1">
+  <div class="user-nav-bar">
+    <div class="user-nav-bar-content">
+      <div class="user-nav-item active">投稿した作品</div>
+    </div>
+    <div class="user-nav-bar-content">
+      <div class="user-nav-item">いいねした作品</div>
+    </div>
+  </div>
 </div>
 <% if @posts.present? %>
   <div class="user-nav-content content-active">
