--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -57,7 +57,7 @@
     </div>
     <div>
     <div class="github-login">
-      <%= link_to "#" do %>
+      <%= link_to user_github_omniauth_authorize_path, method: :post do %>
         <i class="fab fa-github"></i>GitHubで登録する
       <% end %>
     </div>
