--- a/app/views/posts/like_posts.html.erb
+++ b/app/views/posts/like_posts.html.erb
@@ -14,7 +14,7 @@
         <div class="post-nav-item"><%= link_to "新着順", posts_path %></div>
       </div>
       <div class="post-nav-bar-content">
-        <div class="post-nav-item active"><%= link_to "人気順",  stock_posts_posts_path %></div>
+        <div class="post-nav-item active"><%= link_to "人気順",  like_posts_posts_path %></div>
       </div>
       <div class="post-nav-bar-content">
         <div class="post-nav-item"><%= link_to "フォロー", follow_posts_posts_path %></div>
@@ -23,10 +23,10 @@
   </div>
   <div class="post-nav-content">
     <div class="posts-box">
-      <% @stock_posts.each do |post| %>
+      <% @like_posts.each do |post| %>
         <%= render 'shared/posts', post: post %>
       <% end %>
     </div>
-    <%= paginate @stock_posts %>
+    <%= paginate @like_posts %>
   </div>
 <% end %>
