--- a/app/views/shared/_stock_form.html.erb
+++ b/app/views/shared/_stock_form.html.erb
@@ -1,9 +1,9 @@
 <% if Stock.find_by(user_id: current_user.id, post_id: @post.id) %>
   <%= link_to "/posts/#{@post.id}/stocks", method: :delete, class:"expect stock", remote: true do %>
-    <div><i class="stock-action fas fa-thumbs-up" style="color: red;"><%= @post.stocks.length %></i></div>
+    <div><i class="stock-action fas fa-plus-circle" style="color: red;"><%= @post.stocks.length %></i></div>
   <% end %>
 <% else %>
   <%= link_to "/posts/#{@post.id}/stocks", method: :post, class:"expect", remote: true do %>
-    <div><i class="fas fa-thumbs-up" style="color: #000;"><%= @post.stocks.length %></i></div>
+    <div><i class="fas fa-plus-circle" style="color: #000;"><%= @post.stocks.length %></i></div>
   <% end %>
 <% end %>
