--- a/app/views/posts/follow_posts.html.erb
+++ b/app/views/posts/follow_posts.html.erb
@@ -14,7 +14,7 @@
         <div class="post-nav-item"><%= link_to "新着順", posts_path %></div>
       </div>
       <div class="post-nav-bar-content">
-        <div class="post-nav-item"><%= link_to "人気順",  stock_posts_posts_path %></div>
+        <div class="post-nav-item"><%= link_to "人気順",  like_posts_posts_path %></div>
       </div>
       <div class="post-nav-bar-content">
         <div class="post-nav-item active"><%= link_to "フォロー", follow_posts_posts_path %></div>
