--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,10 @@
         </div>
       <% end %>
       <div class="post-show-subinfo">
-        <div id="like-<%= @post.id %>" class="post-show-stock">
+        <div id="like-<%= @post.id %>" class="post-show-like">
+          <%= render "shared/like_form" %>
+        </div>
+        <div id="stock-<%= @post.id %>" class="post-show-like">
           <%= render "shared/stock_form" %>
         </div>
         <div class="post-show-comment">
@@ -96,10 +99,13 @@
               <%= post.content.truncate(40) %>
             </div>
             <div class="side-post-other">
-              <div>
+              <div class="side-post-like">
                 <i class="fas fa-thumbs-up" style="color: #000;"><%= post.stocks.length %></i>
               </div>
-              <div><%= @post.created_at.to_s(:datetime_jp) %></div>
+              <div>
+                <i class="fas fa-plus-circle" style="color: #000;"><%= post.stocks.length %></i>
+              </div>
+              <div class="side-post-time"><%= @post.created_at.to_s(:datetime_jp) %></div>
             </div>
           </div>
         </div>
