rspec追加・修正 #73

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -80,7 +80,7 @@
   </div>
   
   <div class="post-show-side">
-    <div class="side-heading">その他のサービス</div>
+    <div class="side-heading">その他のサービスを見る</div>
     <% @random.each do |post| %>
       <%= link_to post_path(post) do %>
         <div class="side-post">
