--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -31,7 +31,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :アピールポイント %>
+    <%= f.label :アピールポイント %><span class="must"> (必須)</span>
       <%= f.text_area :point, class: "form-control", placeholder:"アピールポイントがあれば、入力してください。(500字以内)", autocomplete:"off" %>
   </div>
 
