--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,53 +2,56 @@
 <h4>あなたが作成したポートフォリオを投稿し、ユーザーに共有します。</h4>
 
 <div class="sub1 flame">
-<%= form_with(model: @post, local: true) do |f| %>
-  <%= render 'shared/error_messages', model: f.object %>
-  
-  <div class="form-group">
-    <%= f.label :サービス名 %><span class="must"> (必須)</span>
-    <%= f.text_field :name, class: "form-control", placeholder:"サービス名を入力してください。(50字以内)", autocomplete:"off" %>	
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :サービス概要 %><span class="must"> (必須)</span>
-    <%= f.text_area :content, class: "form-control", placeholder:"サービスの概要を入力してください。(500字以内)", autocomplete:"off" %>	
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :サムネイル画像 %>
-    <%= f.file_field :image, class: "form-control" %>	
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :サービスのリンク %><span class="must"> (必須)</span>
-    <%= f.text_field :url, class: "form-control", placeholder:"サービスへのリンクを入力してください。", autocomplete:"off" %>	
-  </div>
 
-  <div class="form-group">
-    <%= f.label :作成期間 %><span class="must"> (必須)</span>
-    <%= f.text_field :period, class: "form-control", placeholder:"作成期間を入力してください。", autocomplete:"off" %>
-  </div>
+<ul class="pankuzu">
+  <li class="active">１. 入力</li>
+  <li>２. 確認</li>
+  <li>３. 完了</li>
+</ul>
 
-  <div class="form-group">
-    <%= f.label :アピールポイント %><span class="must"> (必須)</span>
-      <%= f.text_area :point, class: "form-control", placeholder:"アピールポイントがあれば、入力してください。(500字以内)", autocomplete:"off" %>
-  </div>
+  <%= form_with(model: @post, local: true, url: confirm_posts_path) do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
+    
+    <div class="form-group">
+      <%= f.label :サービス名 %><span class="must"> (必須)</span>
+      <%= f.text_field :name, class: "form-control", placeholder:"サービス名を入力してください。(50字以内)", autocomplete:"off" %>	
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :サービス概要 %><span class="must"> (必須)</span>
+      <%= f.text_area :content, class: "form-control", placeholder:"サービスの概要を入力してください。(500字以内)", autocomplete:"off" %>	
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :サムネイル画像 %>
+      <%= f.file_field :image, class: "form-control" %>	
+      <%= f.hidden_field :image_cache  %>
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :サービスのリンク %><span class="must"> (必須)</span>
+      <%= f.text_field :url, class: "form-control", placeholder:"サービスへのリンクを入力してください。", autocomplete:"off" %>	
+    </div>
 
-  <div class="form-group">
-    <%= f.label :タグ（複数つける場合はスペースキーで区切ってください。） %>
-        <%= f.text_field :tag_list, value: @post.tag_list.join(','), class: "form-control", autocomplete:"off", id:"tags" %>
-  </div>
-  
-  <div class="btn-container">
-    <%= f.submit "投稿する", class:"btn-base devise-btn" %>
-  </div>
-<% end %>
-  <div class="back">
-    <%= link_to :back do %>
-      <i class="fas fa-undo"></i> 戻る
-    <% end %>
-  </div>
+    <div class="form-group">
+      <%= f.label :作成期間 %><span class="must"> (必須)</span>
+      <%= f.text_field :period, class: "form-control", placeholder:"作成期間を入力してください。", autocomplete:"off" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :アピールポイント %><span class="must"> (必須)</span>
+        <%= f.text_area :point, class: "form-control", placeholder:"アピールポイントがあれば、入力してください。(500字以内)", autocomplete:"off" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :タグ（複数つける場合はスペースキーで区切ってください。） %>
+          <%= f.text_field :tag_list, value: @post.tag_list.join(','), class: "form-control", autocomplete:"off", id:"tags" %>
+    </div>
+    
+    <div class="btn-container">
+      <%= f.submit "確認画面へ", class:"btn-base devise-btn" %>
+    </div>
+  <% end %>
 </div>
 
 
