--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,33 +13,39 @@
     <%= render 'shared/error_messages', model: f.object %>
     
     <div class="form-group">
-      <%= f.label :サービス名 %><span class="must"> (必須)</span>
+      <%= f.label :name %><span class="must"> (必須)</span>
       <%= f.text_field :name, class: "form-control", placeholder:"サービス名を入力してください。(50字以内)", autocomplete:"off" %>	
     </div>
     
     <div class="form-group">
-      <%= f.label :サービス概要 %><span class="must"> (必須)</span>
+      <%= f.label :content %><span class="must"> (必須)</span>
       <%= f.text_area :content, class: "form-control", placeholder:"サービスの概要を入力してください。(500字以内)", autocomplete:"off" %>	
     </div>
     
-    <div class="form-group">
-      <%= f.label :サムネイル画像 %>
-      <%= f.file_field :image, class: "form-control" %>	
+    <div class="form-group post-new-image">
+      <%= f.label :image %>
+      <%= f.file_field :image, class: "img-field", style: "display:none;" %>	
+      <% if @post.image? %>
+        <%= image_tag @post.image.url, class:"img-prev", onClick: "$('.img-field').click()" %>
+      <% else %>
+        <%= image_tag asset_path("default_post.jpg"), class:"img-prev", onClick: "$('.img-field').click()" %>
+      <% end %>
+
       <%= f.hidden_field :image_cache  %>
     </div>
     
     <div class="form-group">
-      <%= f.label :サービスのリンク %><span class="must"> (必須)</span>
+      <%= f.label :url %><span class="must"> (必須)</span>
       <%= f.text_field :url, class: "form-control", placeholder:"サービスへのリンクを入力してください。", autocomplete:"off" %>	
     </div>
 
     <div class="form-group">
-      <%= f.label :作成期間 %><span class="must"> (必須)</span>
+      <%= f.label :period %><span class="must"> (必須)</span>
       <%= f.text_field :period, class: "form-control", placeholder:"作成期間を入力してください。", autocomplete:"off" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :アピールポイント %><span class="must"> (必須)</span>
+      <%= f.label :point %><span class="must"> (必須)</span>
         <%= f.text_area :point, class: "form-control", placeholder:"アピールポイントがあれば、入力してください。(500字以内)", autocomplete:"off" %>
     </div>
 
