--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,12 +4,12 @@
     <%= render 'shared/error_messages', model: f.object %>
 
     <div class="form-group">
-      <%= f.label :ユーザー名 %><span class="must"> (必須)</span>
+      <%= f.label :name %><span class="must"> (必須)</span>
       <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。", autocomplete:"off" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :メールアドレス %>
+      <%= f.label :email %>
       <% if @user.uid.nil? %>
         <span class="must"> (必須)</span>
       <% end %>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :パスワード %>
+      <%= f.label :password %>
       <% if @user.uid.nil? %>
         <span class="must"> (必須)</span>
       <% end %>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :パスワード確認用 %>
+      <%= f.label :password_confirmation %>
       <% if @user.uid.nil? %>
         <span class="must"> (必須)</span>
       <% end %>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :プロフィール画像 %>
+      <%= f.label :user_image %>
       <%= f.file_field :user_image, class: "form-control" %>
     </div>
 
