--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -1,5 +1,5 @@
+<h1>投稿する</h1>
 <div class="sub1 flame form-horizontal">
-
   <ul class="pankuzu">
     <li>１. 入力</li>
     <li class="active">２. 確認</li>
