--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="comment-box2">
       <%= simple_format(comment.content) %>
-    <% if current_user == comment.user %>
+    <% if current_user == comment.user || current_user.admin? %>
       <%= link_to "削除", post_comment_path(comment.post_id,comment.id), class:"comment-edit expect", method: :delete, remote: true, data:{confirm:"コメントを本当に削除しますか？"} %>
     <% end %>
   </div>
