--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,23 @@
 <h1>ユーザー管理</h1>
+<div class="sub1 rela-container">
 <% @users.each do |user| %>
-  <div>
-    <%= link_to user.name, user_path(user) %>
-  </div>
+  <ul>
+    <li class="rela-image">
+      <% if user.user_image? %>
+        <%= image_tag user.user_image.url %>
+      <% else %>
+        <%= image_tag asset_path("default_user.png") %>
+      <% end %>
+    </li>
+    <li class="rela-username">
+      <%= link_to user.name, user_path(user) %>
+    </li>
+  </ul>
+  <hr>
+<% end %>
+</div> 
+<div class="back">
+  <%= link_to :back do %>
+    <i class="fas fa-undo"></i> 戻る
   <% end %>
+</div>
