--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,11 @@
           <% end %>
         </div>
       <% end %>
+      <% if current_user.admin? %>
+        <div class="user-admin-edit ">
+          <%= link_to "管理者権限で編集", edit_user_path, class:"btn-base" %>
+        </div>
+      <% end %>
     </div>
     <div class="user-show-profile">
       <p><%= simple_format(@user.profile) %></p>
