管理者機能修正 #47

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,7 @@
   <hr>
 <% end %>
 </div> 
+<%= paginate @users %>
 <div class="back">
   <%= link_to :back do %>
     <i class="fas fa-undo"></i> 戻る
