--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,10 +9,10 @@
   <% if user_signed_in? %>
     <div class="header-icon">
       <div class="header-search">
-        タグで探す<i class="fas fa-search" style="color: #fff;"></i>
+        タグで探す<i class="fas fa-search"></i>
       </div>
       <div class="">
-        <%= link_to "#" do %>
+        <%= link_to rooms_path do %>
           <i class="fas fa-comment" style="color: #fff; font-size: 30px;"></i>
         <% end %>
       </div>
