--- a/app/views/posts/follow_posts.html.erb
+++ b/app/views/posts/follow_posts.html.erb
@@ -7,7 +7,7 @@
   </div>
   <%= paginate @tag_posts %>
 <% else %>
-  <h1>全ての作品</h1>
+  <h1>作品一覧</h1>
   <div class="sub1">
     <div class="post-nav-bar">
       <div class="post-nav-bar-content">
