--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
       <% end %>
       <% unless @user.id == current_user.id %>
         <% if @is_room == true %>
-          <p class="user-show-room"><%= link_to "メッセージを送る", room_path(@roomId), class:"btn-base" %>
+          <p class="user-show-room"><%= link_to "メッセージを送る", room_path(@room_id), class:"btn-base" %>
         <% else %>
           <%= form_for @room do |f| %>
             <%= fields_for @entry do |e| %>
