不要ファイル削除 #87

--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-$("#like-<%= @post.id %>").html("<%= j(render '/shared/like_form') %>");
+$("#like-<%= @post.id %>").html("<%= j(render '/likes/like_form') %>");
