--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,10 +18,10 @@
       <% end %>
       <div class="post-show-subinfo">
         <div id="like-<%= @post.id %>" class="post-show-like">
-          <%= render "shared/like_form" %>
+          <%= render "likes/like_form" %>
         </div>
         <div id="stock-<%= @post.id %>" class="post-show-like">
-          <%= render "shared/stock_form" %>
+          <%= render "stocks/stock_form" %>
         </div>
         <div class="post-show-comment">
           <div>
