--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -23,7 +23,7 @@
         <%= link_to "利用規約", term_users_path %>
       </div>
       <div class="ham-item">
-        <%= link_to "お問い合わせ", new_contact_path %>
+        <%= link_to "お問い合わせ", contact_users_path %>
       </div>
       <% if current_user.admin? %>
         <div class="ham-item">
@@ -44,7 +44,7 @@
         <%= link_to "利用規約", term_users_path %>
       </div>
       <div class="ham-item">
-        <%= link_to "お問い合わせ", new_contact_path %>
+        <%= link_to "お問い合わせ", contact_users_path %>
       </div>
     <% end %>
   </div>
