--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#like-<%= @post.id %>").html("<%= j(render '/shared/like_form') %>");
+$("#like-<%= @post.id %>").html("<%= j(render '/likes/like_form') %>");
