--- a/app/views/stocks/destroy.js.erb
+++ b/app/views/stocks/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#stock-<%= @post.id %>").html("<%= j(render '/shared/stock_form') %>");
+$("#stock-<%= @post.id %>").html("<%= j(render '/stocks/stock_form') %>");
