--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,95 +1,2 @@
-<div class="user-show-container sub">
-  <div class="user-show-image">
-    <% if @user.user_image? %>
-      <%= image_tag @user.user_image.url %>
-    <% else %>
-      <%= image_tag asset_path("default_user.png") %>
-    <% end %>
-  </div>
-  <div class="user-show-info">
-    <div class="user-show-name">
-      <%= @user.name %>
-    </div>
-    <div class="user-show-follow">
-      <%= render "stats" %>
-      <%= render "follow_form" %>
-    </div>
-    <div class="user-show-sns">
-      <% unless @user.twitter_link.blank? %>
-        <div>
-          <%= link_to @user.twitter_link, target:"_blank", class:"twitter expect" do %>
-            <i class="fab fa-twitter-square"></i>
-          <% end %>
-        </div>
-      <% end %>
-      <% unless @user.github_link.blank? %>
-        <div>
-          <%= link_to @user.github_link, class:"github expect", target:"_blank" do %>
-            <i class="fab fa-github-square"></i>
-          <% end %>
-        </div>
-      <% end %>
-      <% unless @user.id == current_user.id %>
-        <% if @is_room == true %>
-          <p class="user-show-room"><%= link_to "メッセージを送る", room_path(@room_id), class:"btn-base" %>
-        <% else %>
-          <%= form_for @room do |f| %>
-            <%= fields_for @entry do |e| %>
-              <%= e.hidden_field :user_id, value: @user.id %>
-            <% end %>
-          <%= f.submit "メッセージを送る", class:"btn-base user-show-chat"%>
-          <% end %>
-        <% end %>
-      <% end %>
-      <% if current_user.admin? %>
-        <div class="user-admin-edit ">
-          <%= link_to "管理者権限で編集", edit_user_path, class:"btn-base" %>
-        </div>
-      <% end %>
-    </div>
-    <div class="user-show-profile">
-      <p><%= simple_format(@user.profile) %></p>
-    </div>
-  </div>
-</div>
-
-<div class="sub">
-  <div class="user-nav-bar">
-    <div class="user-nav-bar-content">
-      <div class="user-nav-item active">投稿した作品</div>
-    </div>
-    <div class="user-nav-bar-content">
-      <div class="user-nav-item">いいねした作品</div>
-    </div>
-    <div class="user-nav-bar-content">
-      <div class="user-nav-item">ストックした作品</div>
-    </div>
-  </div>
-</div>
-<div class="user-nav-content content-active">
-  <% if @posts.present? %>
-    <div class="posts-box">
-      <% @posts.order(:created_at).each do |post| %>
-        <%= render 'shared/posts', post: post %>
-      <% end %>
-    </div>
-  <% end %>
-</div>
-<div class="user-nav-content">
-  <% if @likes.present? %>
-    <div class="posts-box">
-      <% @likes.order(:created_at).each do |like| %>
-        <%= render 'shared/posts', post: like.post %>
-      <% end %>
-    </div>
-  <% end %>
-</div>
-<div class="user-nav-content">
-  <% if @stocks.present? %>
-    <div class="posts-box">
-      <% @stocks.order(:created_at).each do |stock| %>
-        <%= render 'shared/posts', post: stock.post %>
-      <% end %>
-    </div>
-  <% end %>
-</div>
+<%= render "user_profile" %>
+<%= render "user_posts" %>
